@@ -277,33 +277,8 @@ Mailbox::lookup (void)
 	Mailbox *mailbox = 0;
 
 	// Local mailbox
-	if (g_path_is_absolute(address_.c_str())) {
-		gchar *base=g_path_get_basename(address_.c_str());
-
-		// Is it a directory?
-		if (g_file_test (address_.c_str(), G_FILE_TEST_IS_DIR)) {
-			gchar *mh_seq=g_build_filename(address_.c_str(),".mh_sequences",NULL);
-			gchar *md_new=g_build_filename(address_.c_str(),"new",NULL);
-
-			if (g_file_test (mh_seq, G_FILE_TEST_IS_REGULAR))
-				mailbox = new Mh (*this);
-			else if (base=="new")
-				mailbox = new Maildir (*this);
-			else if (g_file_test (md_new, G_FILE_TEST_IS_DIR))
-				mailbox = new Maildir (*this);
-			
-			g_free(mh_seq);
-			g_free(md_new);
-		}
-		// Is it a file?
-		else if (g_file_test (address_.c_str(), (G_FILE_TEST_EXISTS))) {
-			if (base==std::string(".mh_sequences"))
-				mailbox = new Mh (*this);
-			else
-				mailbox = new File (*this);
-		}
-	}
-
+	if (g_path_is_absolute(address_.c_str()))
+		mailbox=lookup_local(this);
 	// Distant mailbox
 	else {
 		std::string line;
@@ -434,6 +409,40 @@ Mailbox::lookup (void)
 #endif
 
 	threaded_start (3);
+}
+
+Mailbox * 
+Mailbox::lookup_local(Mailbox *oldmailbox)
+{
+	Mailbox *mailbox=NULL;
+	const gchar *address=oldmailbox->address().c_str();
+	gchar *base=g_path_get_basename(address);
+
+	// Is it a directory?
+	if (g_file_test (address, G_FILE_TEST_IS_DIR)) {
+		gchar *mh_seq=g_build_filename(address,".mh_sequences",NULL);
+		gchar *md_new=g_build_filename(address,"new",NULL);
+
+		if (g_file_test (mh_seq, G_FILE_TEST_IS_REGULAR))
+			mailbox = new Mh (*oldmailbox);
+		else if (std::string(base)=="new")
+			mailbox = new Maildir (*oldmailbox);
+		else if (g_file_test (md_new, G_FILE_TEST_IS_DIR))
+			mailbox = new Maildir (*oldmailbox);
+
+		g_free(mh_seq);
+		g_free(md_new);
+	}
+	// Is it a file?
+	else if (g_file_test (address, (G_FILE_TEST_EXISTS))) {
+		if (std::string(base)==".mh_sequences")
+			mailbox = new Mh (*oldmailbox);
+		else
+			mailbox = new File (*oldmailbox);
+	}
+
+	g_free(base);
+	return mailbox;
 }
 
 // ================================================================================
