@@ -91,6 +91,9 @@ Version 2.1.0
    - Ported substituting of "%d" from 2.0.2 to 2.1.0
    - Bugfix: Selecting "File or Folder" or "Autodetect" in properties dialog
    - Bugfix: Segfaults when all mails are read while popup is present
+   - Bugfixes in local mailbox detection; local mailboxes are identified
+     immediately
+   - Feature: Use of relative paths allowed (when not using autodetection)
 
 Version 2.0.3
   * Roland Stigge:
